--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-04-23T20:59:52Z</date>
+						<date>2018-04-23T22:08:43Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -322,11 +322,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								gpe1k+58cThE
-								OEurgqdYTQ==
+								2RnWMxyVMuhF
+								gQKhZ+H9EQ==
 								</data>
 								<key>Size</key>
-								<integer>178496</integer>
+								<integer>181422</integer>
 							</dict>
 							<key>files/stacks_page_page48.js</key>
 							<dict>
@@ -352,11 +352,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								eu+TF6XeuJyD
-								jtMcd4vmuA==
+								P5pW/I4j3Htj
+								7BfdwtAYbg==
 								</data>
 								<key>Size</key>
-								<integer>91960</integer>
+								<integer>96347</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
