--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-04-16T23:39:22Z</date>
+						<date>2018-04-23T22:08:43Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -242,11 +242,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								/BZlYdVf8Yjs
-								vW0QBEx7KQ==
+								VdmnW8CpRIlp
+								jmI70tFPiQ==
 								</data>
 								<key>Size</key>
-								<integer>155668</integer>
+								<integer>155718</integer>
 							</dict>
 							<key>files/stacks_page_page49.js</key>
 							<dict>
@@ -262,11 +262,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								W5ylrXprcYmp
-								aDDtGGNS8g==
+								HV2a5aDFayAa
+								A+wR1TvR8Q==
 								</data>
 								<key>Size</key>
-								<integer>75182</integer>
+								<integer>75506</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
