--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-04-16T23:39:22Z</date>
+						<date>2018-04-23T22:08:43Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -132,8 +132,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								/UhQDKb9O8EJ
-								Xx0xIWugyw==
+								lX8jdrDLl+LJ
+								pXUOOwpWaw==
 								</data>
 								<key>Size</key>
 								<integer>149429</integer>
@@ -152,11 +152,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								5AOfIgcJzHPM
-								PTqhAOvjeg==
+								7e0poPQFsqsu
+								xTl5lwCnPw==
 								</data>
 								<key>Size</key>
-								<integer>57399</integer>
+								<integer>57429</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
