--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-Community-Lectures/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-Community-Lectures/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-04-16T23:39:22Z</date>
+						<date>2018-04-23T22:08:43Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -112,11 +112,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								RRkKJJu2tuNs
-								a+yHUT4Uig==
+								KSAKvy5C0izb
+								8uAnHDfZFw==
 								</data>
 								<key>Size</key>
-								<integer>131502</integer>
+								<integer>131552</integer>
 							</dict>
 							<key>files/stacks_page_page45.js</key>
 							<dict>
@@ -132,11 +132,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								x7V97YMDSQMN
-								JxXu1Ef/rg==
+								w3RMrRmMLnda
+								hjZrXR4h/A==
 								</data>
 								<key>Size</key>
-								<integer>42975</integer>
+								<integer>43299</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
