--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-04-23T20:59:52Z</date>
+						<date>2018-04-23T22:08:43Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -47,16 +47,6 @@
 								</data>
 								<key>Size</key>
 								<integer>3950</integer>
-							</dict>
-							<key>files/small_109809.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								ICYi4Z+nlMU5
-								ZJ5jWAVsyg==
-								</data>
-								<key>Size</key>
-								<integer>170336</integer>
 							</dict>
 							<key>files/small_p60311_n109623.png</key>
 							<dict>
@@ -157,6 +147,26 @@
 								</data>
 								<key>Size</key>
 								<integer>64767</integer>
+							</dict>
+							<key>files/stacks-image-799943b-750x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								QItmjV1ggL6b
+								efG75dMJdw==
+								</data>
+								<key>Size</key>
+								<integer>29480</integer>
+							</dict>
+							<key>files/stacks-image-799943b-750x250@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								QVUhkk6Dt7iw
+								/XqmB3b5AA==
+								</data>
+								<key>Size</key>
+								<integer>76074</integer>
 							</dict>
 							<key>files/stacks-image-7ceb613-250x250.png</key>
 							<dict>
@@ -342,11 +352,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								wg8aygCE0EvP
-								EQ0+wNfhYA==
+								/TsfVLufgC++
+								n2mK6dKMqg==
 								</data>
 								<key>Size</key>
-								<integer>179994</integer>
+								<integer>181735</integer>
 							</dict>
 							<key>files/stacks_page_page46.js</key>
 							<dict>
@@ -372,11 +382,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								FTWOuyHHAGGb
-								4E0Sj29T+g==
+								j9TgSqIQKrkU
+								5tdy8FtciQ==
 								</data>
 								<key>Size</key>
-								<integer>94662</integer>
+								<integer>97640</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
