--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Idea-Collider/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Idea-Collider/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-04-16T23:39:22Z</date>
+						<date>2018-04-23T22:08:43Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -92,11 +92,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								9xvwCCeBV+Fk
-								y9AGJn4ByA==
+								uipweXUEujNk
+								/2LEFm3VEA==
 								</data>
 								<key>Size</key>
-								<integer>130280</integer>
+								<integer>130330</integer>
 							</dict>
 							<key>files/stacks_page_page37.js</key>
 							<dict>
@@ -112,11 +112,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Cmws50nJEKT8
-								8k86G57D5Q==
+								kMEnXoEM28jp
+								m9133bjxCA==
 								</data>
 								<key>Size</key>
-								<integer>40237</integer>
+								<integer>40561</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
