changed title of Chris' talk
changed title of Chris' talk

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -2439,7 +2439,7 @@
 					<key>page34 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-04-23T22:08:43Z</date>
+						<date>2018-04-26T18:25:29Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -2678,11 +2678,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								2J4qTCJoJXCn
-								E1t/b8zGDg==
+								a15aZtFMZvpa
+								oWAST/bljA==
 								</data>
 								<key>Size</key>
-								<integer>75025</integer>
+								<integer>74990</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -3749,7 +3749,7 @@
 					<key>page46 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-04-23T22:08:43Z</date>
+						<date>2018-04-26T18:25:29Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -4098,11 +4098,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								j9TgSqIQKrkU
-								5tdy8FtciQ==
+								WV3511kh3XY7
+								Mpr+Ko0A9A==
 								</data>
 								<key>Size</key>
-								<integer>97640</integer>
+								<integer>97570</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
