--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/Contents.plist
@@ -26,14 +26,14 @@
 					<key>Name</key>
 					<string>Stacks</string>
 					<key>Version</key>
-					<string>3.5.8</string>
+					<string>3.5.9</string>
 				</dict>
 				<key>PublishingManifests</key>
 				<dict>
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-04-26T18:25:29Z</date>
+						<date>2018-05-01T18:49:20Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -87,6 +87,26 @@
 								</data>
 								<key>Size</key>
 								<integer>402239</integer>
+							</dict>
+							<key>files/stacks-image-062a04b-250x250.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								eQ9Rh52FGIe7
+								UYosePi0aA==
+								</data>
+								<key>Size</key>
+								<integer>89870</integer>
+							</dict>
+							<key>files/stacks-image-062a04b-250x250@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								2B7IB/yHoOnv
+								HElNONFqwA==
+								</data>
+								<key>Size</key>
+								<integer>329420</integer>
 							</dict>
 							<key>files/stacks-image-48ee80b-250x250.png</key>
 							<dict>
@@ -157,16 +177,6 @@
 								</data>
 								<key>Size</key>
 								<integer>380074</integer>
-							</dict>
-							<key>files/stacks-image-9268316-250x302.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								l3WVVlrPxAtK
-								G+H1fLoR3w==
-								</data>
-								<key>Size</key>
-								<integer>99650</integer>
 							</dict>
 							<key>files/stacks-image-9e3cec5-98x150.png</key>
 							<dict>
@@ -252,11 +262,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								+2unebM701pX
-								RYiFVP2MbQ==
+								GDjdaNU0Ttns
+								G3dQ5hg8Ng==
 								</data>
 								<key>Size</key>
-								<integer>177728</integer>
+								<integer>162262</integer>
 							</dict>
 							<key>files/stacks_page_page34.js</key>
 							<dict>
@@ -272,11 +282,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								a15aZtFMZvpa
-								oWAST/bljA==
+								urutFgBZp8Oi
+								npoUTwm1rA==
 								</data>
 								<key>Size</key>
-								<integer>74990</integer>
+								<integer>68506</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
